Solved some layout issues

--- a/style.css
+++ b/style.css
@@ -177,14 +177,15 @@ footer{
     width: 80%;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 footer h1{
     font-weight: 800;
     font-size: 2.5rem;
-    width: 35%;
+    width: 32%;
 }
 footer p{
-    width: 30%;
+    width: 27%;
     color: white;
 }
 
@@ -198,7 +199,7 @@ footer p{
     cursor: pointer;
 }
 
-@media(max-width:910px) and (min-width:400px){
+@media(max-width:910px) and (min-width:500px){
     main{
         grid-template-columns: 1fr 1fr;
         grid-auto-rows: auto ;
@@ -240,11 +241,26 @@ footer p{
     
 }
 @media(max-width:500px){
+    main{
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: auto ;
+        grid-template-areas: 
+            "leftImg rightImg"
+            "groupChat groupChat";
+        column-gap: 0;
+        row-gap: 1.5em;
+    }
+    #leftImg{
+        position: static;
+    }
+    #rightImg{
+        position: static;
+    }
     .gallery{
         flex-wrap: wrap;
     }
     .card{
-        min-width: 200px;
+        min-width: 150px;
     }
     .buttonGroup{
         flex-direction: column;
@@ -257,10 +273,18 @@ footer p{
     #whatIsItBtn{
         width: 40%;
     }
+    .section2{
+        width: 90%;
+    }
+    footer{
+        height: 450px;
+    }
     footer h1{
         width: 90%;
+        text-align: center;
     }
     footer p{
         width: 90%;
+        text-align: center;
     }
 }
